Added air-quality-monitor-test and reorganized home page tiles

--- a/index.html
+++ b/index.html
@@ -48,16 +48,6 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="explorables/speck-air-quality-test.html">
-                <div>
-                  <img class="thumbnail-image" src="img/speck12x12@2x.png">
-                  <div class="thumbnail-title">Speck Air Quality Test</div>
-                  <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier, and blowing out candles.
-                  </div>
-                </div>
-              </a>
-            </td>
-            <td class="thumbnail">
               <a href="explorables/firms-timelapse.html">
                 <div>
                   <img class="thumbnail-image" src="img/firms-lance-modis@2x.png">
@@ -66,8 +56,6 @@
                 </div>
               </a>
             </td>
-          </tr>
-          <tr>
             <td class="thumbnail">
               <a href="explorables/suburban-sprawl.html">
                 <div>
@@ -77,15 +65,8 @@
                 </div>
               </a>
             </td>
-            <td class="thumbnail">
-              <a href="explorables/airnow.html">
-                <div>
-                  <img class="thumbnail-image" src="img/airnow@2x.png">
-                  <div class="thumbnail-title">AirNow</div>
-                  <div class="thumbnail-description">Explorable visualization of AirNow PM 2.5 data showing changes in particle values and air quality across the United States.</div>
-                </div>
-              </a>
-            </td>
+          </tr>
+          <tr>
             <td class="thumbnail">
               <a href="http://explorables.cmucreatelab.org/data-visualization-tools/examples/wells/google-maps.html" target="_blank">
                 <div>
@@ -105,8 +86,6 @@
                 </div>
               </a>
             </td>
-          </tr>
-          <tr>
             <td class="thumbnail">
               <a href="explorables/eva-and-lehd.html">
                 <div>
@@ -125,6 +104,27 @@
                 </div>
               </a>
             </td>
+          </tr>
+          <tr>
+            <td class="thumbnail">
+              <a href="explorables/air-quality-monitor-tests">
+                <div>
+                  <img class="thumbnail-image" src="img/air-quality-monitor-test@2x.png">
+                  <div class="thumbnail-title">Air Quality Monitor Test</div>
+                  <div class="thumbnail-description">Performance comparision of six low-cost air quality monitors against an EPA-approved class III particle detector.</div>
+                </div>
+              </a>
+            </td>
+            <td class="thumbnail">
+              <a href="explorables/speck-air-quality-test.html">
+                <div>
+                  <img class="thumbnail-image" src="img/speck12x12@2x.png">
+                  <div class="thumbnail-title">Speck Air Quality Test</div>
+                  <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier, and blowing out candles.
+                  </div>
+                </div>
+              </a>
+            </td>
             <td class="thumbnail">
               <a href="explorables/speck-in-home.html">
                 <div>
@@ -135,8 +135,15 @@
                 </div>
               </a>
             </td>
-            <td></td>
-            <td></td>
+            <td class="thumbnail">
+              <a href="explorables/airnow.html">
+                <div>
+                  <img class="thumbnail-image" src="img/airnow@2x.png">
+                  <div class="thumbnail-title">AirNow</div>
+                  <div class="thumbnail-description">Explorable visualization of AirNow PM 2.5 data showing changes in particle values and air quality across the United States.</div>
+                </div>
+              </a>
+            </td>
           </tr>
         </table>
       </div>
