- Uncommitted changes   * Point to local, more updated version of timemachine-viewer   * Use latest version (1.11.3) of jQuery from 1.11 branch

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/suburban-sprawl@2x.png">
                   <div class="thumbnail-title">Suburban Sprawl</div>
-                  <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using TimeMachine to show the full scope of changes.</div>
+                  <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using Google Earth Timelapse to show the full scope of changes.</div>
                 </div>
               </a>
             </td>
@@ -82,7 +82,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/earthquakes@2x.png">
                   <div class="thumbnail-title">Fracking Earthquakes</div>
-                  <div class="thumbnail-description">Visualization of Landsat and USGS data, utilizing TimeMachine to explore the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
+                  <div class="thumbnail-description">Visualization of Landsat and USGS data, utilizing Google Earth Timelapse to explore the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
                 </div>
               </a>
             </td>
@@ -100,7 +100,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/yenchia@2x.png">
                   <div class="thumbnail-title">Timelapse Story Telling</div>
-                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using TimeMachine.</div>
+                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Google Earth Timelapse.</div>
                 </div>
               </a>
             </td>
